# gpuPlume

./: ArgumentParsing.cpp  ArgumentParsing.h  CMakeLists.txt  CmdOptionInterpreter.cpp  CmdOptionInterpreter.h  Contour.cpp  Contour.h  GLSL.cpp  GLSL.h  GaussianModel.cpp  GaussianModel.h  Gaussian_2shaders_Model.cpp  Gaussian_2shaders_Model.h  GeomTest.cpp  GeomTest.h  InetAddress.cpp  InetAddress.h  IsoSurface.cpp  IsoSurface.h  Makefile  Makefile.osx  MakefileosgHMD  MultipleBuildingsModel.cpp  MultipleBuildingsModel.h  NLMCHanges_Notes.txt  NetworkManager.cpp  NetworkManager.h  PNGImage.cpp  PNGImage.h  PathLine.cpp  PathLine.h  Preferences.txt  README.txt  README_CreatingDomains.txt  Random.cpp  ReflectionModel.cpp  ReflectionModel.h  TODO.txt  Timer.cpp  Timer.h  (+60 more)
Modular_QUICPLUME/: DataModule.f90  Random.f90  ReadFiles.f90  WriteFiles.f90
Modular_QUICPLUME/InputFiles/: QU_buildings.inp
STAR/: QUIC-GPU-Orginal_CoordinateSystem.ppt
STAR/code/balli_work/Trials/: important.txt
STAR/code/eric_work/Trials/: important.txt
STAR/documentation/: Coord_Rotation_QP.doc  FlowChart_QP.ppt
Settings/: NineCubicalBuildingsCase_input.txt  SingleBuilding_30x30_w0_input.txt  SingleBuilding_30x60_w0_CR_input.txt  SingleBuilding_30x60_w0_input.txt  TwoBuildings_30x80_w0_input.txt  TwoBuildings_30x80_w30_input.txt  TwoBuildings_50x80_w0_CR_input.txt  TwoBuildings_50x80_w0_input.txt  TwoBuildings_50x80_w45_CR_input.txt  TwoBuildings_50x80_w45_input.txt  input.txt  multiBuilding.txt
Shaders/: cellInShadow_fp.glsl  cellInShadow_vp.glsl  contours_fp.glsl  currVel_fp.glsl  direction_to_color_fp.glsl  emitParticle_fp.glsl  emitParticle_vp.glsl  initialize_fp.glsl  isoSurface_gp.glsl  isoSurface_vp.glsl  lighting_fp.glsl  lighting_fragment.glsl  lighting_vertex.glsl  lighting_vp.glsl  meanVel_fp.glsl  multipleBuildingsAdvectVariedinU_fp.glsl  multipleBuildingsAdvect_fp.glsl  multipleBuildingsAdvect_vp.glsl  nonGaussianAdvect_fp.glsl  particleVisualize_fp.glsl  particleVisualize_vp.glsl  pathLine_fp.glsl  plumeAdvect_fp.glsl  reflectionAdvect_fp.glsl  render3D_fp.glsl  scale_fp.glsl  scale_vp.glsl  snowVisualize_fp.glsl  snowVisualize_vp.glsl  sphereVisualize_fp.glsl  streamLines_gp.glsl  streamLines_vp.glsl  toneMap_fp.glsl  toneMap_vp.glsl  turbulenceLayer_fp.glsl  turbulencePlane_fp.glsl  turbulencePlane_vp.glsl  updatePrime_and_Advect_fp.glsl  updatePrime_and_Advect_vp.glsl  updatePrime_fp.glsl  (+2 more)
SkyBox/: back.ppm  down.ppm  front.ppm  left.ppm  right.ppm  up.ppm
SkyBox/clouds/: reef_down.ppm  reef_east.ppm  reef_north.ppm  reef_south.ppm  reef_up.ppm  reef_west.ppm
SkyBox/mystic/: mystic_down.ppm  mystic_east.ppm  mystic_north.ppm  mystic_south.ppm  mystic_up.ppm  mystic_west.ppm
SkyBox/rays/: README
Tests/: fortranWriteTest.f90  randomTest.cpp  readFortranData.cpp  readFortranTurbFieldData.cpp
TreadNet/Controller/: CMakeLists.txt  Client_Controller.cpp  Client_Controller.h  Net_Controller.cpp  Server_Controller.cpp
TreadNet/Packet/: ByteArray_Packet.cpp  ByteArray_Packet.h  CMakeLists.txt  Command_Data.h  Command_Packet.cpp  Command_Packet.h  FSRSignals_Packet.cpp  GetUserState_Data.h  GetUserState_Packet.cpp  GetUserState_Packet.h  NewPosResponse_Packet.cpp  NewPos_Data.cpp  NewPos_Data.h  Packet_Data.h  Registration_Data.cpp  Registration_Data.h  Registration_Packet.cpp  Registration_Packet.h  ServerRequest_Data.cpp  ServerRequest_Data.h  ServerRequest_Packet.h  Stairs_Data.h  Stairs_Packet.h  TRVector.cpp  TRVector.h  Tracker_Packet.cpp  Treadport_Types.cpp  Treadport_Types.h  UserState_Packet.cpp  UserState_Packet.h  VirtualState_Data.cpp  VirtualState_Data.h  VirtualState_Packet.h
TreadNet/RTCSync/: CMakeLists.txt
TreadNetLib/: arch.sh  makefile
TreadNetLib/CVS/: Entries  Repository
TreadNetLib/Docs/: TRNetPackets.html
TreadNetLib/Docs/CVS/: Entries  Repository
TreadNetLib/Make/: MakeDefs  MakeDir.rules  Makefile.rules  sample_makefile
TreadNetLib/Make/CVS/: Entries  Repository
TreadNetLib/include/: FSRSignals_Packet.h  Net_Controller.h  NewPos_Packet.h  Packet_Data.h  Registration_Data.h  Server_Controller.h  TRQuaternion.h  Tracker_Packet.h  UserState_Data.h  winSync.h
TreadNetLib/libs/intel_win/: TRNetPacketLibrary.lib
TreadNetLib/src/: makefile
TreadNetLib/src/CVS/: Entries  Repository
TreadNetLib/src/Clocks/: makefile
TreadNetLib/src/Clocks/CVS/: Entries  Repository
TreadNetLib/src/Clocks/Linux/: makefile  rtcSync.cpp  rtcSync.h
TreadNetLib/src/Clocks/VxWorks/: VxSyncLib.wsp  makefile  vxSync.cpp  vxSync.h
TreadNetLib/src/Clocks/WinSyncLib/: WinSyncLib.dsp  WinSyncLib.dsw  WinSyncLib.ncb  WinSyncLib.opt  WinSyncLib.plg  makefile  winSync.cpp
TreadNetLib/src/apps/: makefile
TreadNetLib/src/apps/CVS/: Entries  Repository
TreadNetLib/src/apps/TestClients/: .depend_full_packet_tc.out  .depend_sc.out  .depend_tc.out  .depend_tc_single_slope.out  Client_Common.cpp  Client_header.h  full_packet_tc.cpp  full_packet_tc.out  makefile  prog_makefile  sc.cpp  sc.out  tc.cpp  tc.out  tc_single_slope.cpp  tc_single_slope.out
TreadNetLib/src/lib/: makefile
UberParticle/: UberParticle.sln  UberParticle.vcproj  pass1.glsl  render_fp.glsl  render_vp.glsl
UberParticle/Debug/: BuildLog.htm
building_ising_config/BaseProject/: BaseProject.proj  gpuplume_input.txt  gpuplumetimes.m
building_ising_config/BaseProject/BaseProject_inner/: BaseProject.info  QPR_params.inp  QP_bioslurry.inp  QP_buildout.inp  QP_buoy.inp  QP_erad.inp  QP_fileoptions.inp  QP_indoor.inp  QP_materials.inp  QP_params.inp  QP_particlesize.inp  QP_source.inp  QU_buildings.inp  QU_fileoptions.inp  QU_metparams.inp  QU_simparams.inp  dosage.mat  executeQuic.pl  particle_coords.mat  particle_info.mat  plumegrid.mat  run_gpuPlume.pl  windgrid.mat
extLibs/: glew-1.5.1.tgz
gpuQUICPLUME/: gpuQUICPLUME.sln  gpuQUICPLUME.vcproj
quicLoader/: CMakeLists.txt  QPParams.cpp  QPParams.h  QPSource.cpp  QPSource.h  QUBuildings.cpp  QUBuildings.h  QUICData.h  QUICDataFile.h  QUMetParams.cpp  QUMetParams.h  QUSensor.cpp  QUSensor.h  QUSimparams.cpp  QUSimparams.h  allDataStuff
(+401 files in other folders)
